# zephyr-rust-integration

./: CMakeLists.txt  README.md
driver/hello_driver/: CMakeLists.txt  prj.conf
driver/hello_driver/bindings/headers/: bindings.h
driver/hello_driver/bindings/src/: bindings.rs  lib.rs
driver/hello_driver/boards/arm/nrf52840_pca10056/: nrf52840_pca10056.dts
driver/hello_driver/boards/arm/nrf52840_pca10059/: nrf52840_pca10059_defconfig
driver/hello_driver/boards/arm/qemu_cortex_m3/: qemu_cortex_m3.dts
driver/hello_driver/hello_driver/: Cargo.toml  Makefile
driver/hello_driver/hello_driver/src/: lib.rs
driver/hello_driver/src/: socket_echo.c
driver/hello_driver/zephyr_ffi/src/: io.rs  lib.rs
driver/uart-driver/: README.md  prj.conf
driver/uart-driver/bindings/: Cargo.toml
driver/uart-driver/bindings/src/: lib.rs
driver/uart-driver/boards/arm/nrf52840_pca10059/: nrf52840_pca10059.dts
driver/uart-driver/hello_driver/: Cargo.toml
driver/uart-driver/hello_driver/lib/: bindings.h
driver/uart-driver/hello_driver/src/: lib.rs
driver/uart-driver/zephyr_ffi/src/: socket.rs
echo_server/: .gitignore  CMakeLists.txt
echo_server/bindings/: Cargo.toml
echo_server/bindings/src/: lib.rs
echo_server/rust_echo_server/: Makefile
echo_server/rust_echo_server/src/: lib.rs
echo_server/src/: echo-server.c
hello/: CMakeLists.txt  Cargo.toml  Makefile
hello/echo/: Cargo.toml
hello/lib/: bindings.h
hello/src/: lib.rs
hello_rust/bindings/src/: lib.rs
hello_rust/hello/: Cargo.toml  Makefile
hello_rust/src/: main.c
sockets/echo/: CMakeLists.txt  overlay-enc28j60-pca10056.conf  overlay-enc28j60-pca10059.conf  overlay-enc28j60.conf  prj.conf
sockets/echo/bindings/src/: lib.rs
sockets/echo/boards/arm/nrf52840_pca10056/: nrf52840_pca10056_defconfig
sockets/echo/echo/: Cargo.toml  Makefile
sockets/echo/echo/src/: lib.rs
sockets/echo/src/: socket_echo.c
sockets/echo/zephyr_ffi/: Cargo.toml
sockets/echo/zephyr_ffi/src/: io.rs  lib.rs  socket.rs
